--- a/index.css
+++ b/index.css
@@ -1,3 +1,18 @@
+/* Шрифты */
+@font-face {
+    font-family: 'Machinec';
+    src: url(/assets/MachineC/machinec.otf);
+  }
+@font-face {
+    font-family: 'Akrobat-Regular';
+    src: url(/assets/Akrobat/Akrobat-Regular.otf);
+  }
+@font-face {
+    font-family: 'Akrobat-SemiBold';
+    src: url(/assets/Akrobat/Akrobat-SemiBold.otf);
+  }
+
+
 *{
     margin: 0;
     padding: 0;
@@ -8,9 +23,287 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: #EDEFF1;
 }
+
+
+
+
+/* Header */
 .header_container{
     width: 100%;
     height: 4vw;
     background-color: #162E4E;
+    padding: 0 20vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1vw;
+}
+.logo_header_container{
+    display: flex;
+    flex-direction: column;
+    gap: .3vw;
+}
+.logo_header{
+    color: white;
+    font-family: 'Akrobat-SemiBold';
+    font-size: .7vw;
+    width: 12vw;
+    display: flex;
+
+}
+.logo{
+    height: 3vw;
+    width: auto;
+    cursor: pointer;
+}
+.logo_header2{
+    color: white;
+    font-family: 'Akrobat-SemiBold';
+    font-size: .5vw;
+    width: 12vw; 
+}
+.nav_container{
+    display: flex;
+    gap: 0;
+    gap: .7vw;
+}
+.nav_container span{
+    color: white;
+    font-family: 'Machinec';
+    font-size: .9vw;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all .3s;
+}
+.nav_container span:hover{
+    opacity: .8;
+}
+
+
+/* Main */
+.main_container{
+    margin: 7vw 0;
+    position: relative;
+}
+.main_bacground_image{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    right: 5%;
+}
+.main_text_container{
+    display: flex;
+    flex-direction: column;
+    padding: 0 20vw;
+    margin: 0;
+    width: 100%;
+}
+.crumbs{
+    color: black;
+    font-family: 'Akrobat-SemiBold';
+    font-size: .9vw;
+    display: flex;
+    align-items: center;
+    gap: .2vw;
+}
+.crumbs span{
+    color: #B8342D;
+    font-size: 1.3vw;
+}
+.main_header{
+    color: #162E4E;
+    font-family: 'Machinec';
+    font-weight: 200;
+    font-size: 3.5vw;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all .3s;
+    width: 35vw;
+    margin-bottom: 8vw;
+}
+.main_logo_container{
+    display: flex;
+    width: 20vw;
+    margin-top: 1vw;
+    gap: 4vw;
+}
+.main_logo_container:last-child{
+    gap: 5vw;
+}
+.main_logo_container img{
+    width: 3vw;
+    height: auto;
+}
+
+
+/* About */
+.about_container{
+    position: relative;
+    width: 100%;
+    height: 30vw;
+    display: flex;justify-content: end;
+    padding-right: 20vw;
+}
+.about_bacground_image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 0;
+}
+.about_text_container{
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+}
+.about_text_header{
+    color: #B8342D;
+    font-family: 'Machinec';
+    font-size: 1.3vw;
+    text-transform: uppercase;
+    z-index: 1;
+}
+.about_text_text{
+    color: black;
+    font-family: 'Akrobat-SemiBold';
+    font-size: .8vw;
+    z-index: 1  ;
+    margin-top: 0.8vw;
+    opacity: .5;
+}
+
+/* Pleers */
+.pleers_container{
+    position: relative;
+    width: 100%;
+    height: 35vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 20vw;
+    padding-top: 3vw;
+}
+.pleers_bacground_image{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width:  100%;
+}
+.pleers_header_container{
+    display: flex;
+    align-items: center;
+    gap: 5vw;
+}
+.pleers_header{
+    color: #B8342D;
+    font-family: 'Machinec';
+    font-size: 1.3vw;
+    text-transform: uppercase;
+    z-index: 1;
+}
+.pleers_description{
+    color: black;
+    font-family: 'Akrobat-SemiBold';
+    font-size: .8vw;
+    z-index: 1  ;
+    margin-top: 0.5vw;
+    opacity: .5;
+    width: 15vw;
+}
+.pleers_city_container{
+    display: flex;
+    flex-direction: column;
+}
+.pleers_city{
+    display: flex;
+    color: #B8342D;
+    font-size: 1.7vw;
+    font-family: 'Machinec';
+    z-index: 1;
+    gap: .4vw;
+}
+.pleers_city span{
+    color: #162E4E;
+}
+
+
+/* PleersCards */
+.pleers_cards_container{
+    display: flex;
+    flex-wrap: wrap;
+    padding:  4vw 20vw;
+    width: 100%;
+    height: auto;
+    justify-content: space-between;
+}
+.pleers_card{
+    position: relative;
+    background-color: #E7E9EC;
+    height: 13vw;
+    width: 13vw;
+    margin-top: 3vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 1vw;
+}
+.pleers_card_red{
+    position: absolute;
+    top: 10%;
+    right: 0;
+}
+.pleers_card_logo{
+    width: 3vw;
+    height:  auto;
+}
+.pleers_card_text_container{
+    display: flex;
+    flex-direction: column;
+}
+.pleers_card_header{
+    color: #B8342D;
+    font-size: 1.3vw;
+    font-family: 'Machinec';
+}
+.pleers_card_city{
+    color: #162E4E;
+    font-size: .8vw;
+    font-family: 'Machinec';
+    margin-top: 0.3vw;
+}
+
+
+/* Arena */
+.arena_container{
+    display: flex;
+    flex-direction: column;
+    padding: 5vw 20vw;
+
+}
+.arena_header{
+    color: #B8342D;
+    font-size: 1.7vw;
+    font-family: 'Machinec';
+}
+.arena_card_container{
+    display: flex;
+    position: relative;
+}
+.arena_img{
+    clip-path: polygon(0 0, 100% 0%, 86% 99%, 0% 100%);
+}
+.arena_red_box{
+    width: 100%;
+    height: 100%;
+    background-color: #B8342D;
+    display: flex;
+    flex-direction: column;
 }
