--- a/app/index.css
+++ b/app/index.css
@@ -105,7 +105,7 @@
     gap: 0;
     gap: .7vw;
 }
-.nav_container span{
+.nav_link{
     color: white;
     font-family: 'Machinec';
     font-size: .9vw;
@@ -113,7 +113,7 @@
     cursor: pointer;
     transition: all .3s;
 }
-.nav_container span:hover{
+.nav_link:hover{
     opacity: .8;
 }
 
@@ -126,6 +126,7 @@
 .main_bacground_image{
     position: absolute;
     height: 100%;
+    width: auto;
     top: 0;
     right: 5%;
 }
@@ -187,6 +188,7 @@
     top: 0;
     left: 0;
     height: 100%;
+    width: auto;
     z-index: 0;
 }
 .about_text_container{
@@ -225,6 +227,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    height: auto;
     width:  100%;
 }
 .pleers_header_container{
@@ -290,6 +293,8 @@
     position: absolute;
     top: 10%;
     right: 0;
+    width: 30%;
+    height: auto;
 }
 .pleers_card_logo{
     width: 3vw;
@@ -368,6 +373,7 @@
     top:1vw;
     right:1vw;
     width: 1.7vw;
+    height: auto;
 }
 .arena_red_box_name{
     color: #ffffff;
@@ -440,10 +446,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+    transition: all .3s;
 }
-.schedule_button:last-child{
+.schedule_button:hover{
     color: white;
     background-color: #B8342D;
+}
+.schedule_button_active{
+    color: white;
+    background-color: #B8342D;
+}
+.schedule_button_active:hover{
+    background-color: #8d150e;
 }
 .schedule_card{
     display: flex;
