--- a/app/index.css
+++ b/app/index.css
@@ -498,12 +498,12 @@
         margin-top: 0.5vw;
         opacity: .8;
         width: 80vw;
-        text-align: center;
+        text-align: left;
     }
     .pleers_city_container{
         display: flex;
         flex-direction: column;
-        padding-left: 10vw;
+        padding-left: 5vw;
         margin-bottom: 3vh;
     }
     .pleers_city{
